feat: v1 minor mongo integration
