# types/models.go
@@ -1,5 +1,13 @@
 package types
 
+import "time"
+
+type Log struct {
+	ApplicationID string    `bson:"application_id"`
+	Logs          string    `bson:"logs"`
+	Timestamp     time.Time `bson:"timestamp"`
+}
+
 type UserModel struct {
 	ID       int64  `db:"id"`       // Assuming ID is auto-incremented
 	Username string `db:"username"` // Add fields according to your schema
